# Monopoly-vs-AI-Game

./: .clang-format  .gitignore  README.md  TODO.md  clang-format.sh  clang-format.txt  game_logs.txt  level_2_ai  level_3_ai  makefile  monopolyTests  monopolyTests.sh  monopolyVsAI.sh  monopoly_level1_ai.res  monopoly_level3_ai.res  tasks.json  temat_projektu.txt
Monopoly/: ActiveScreen.cc  ActiveScreen.h  AiAdapter.cc  AiAdapter.cpp  AiAdapter.h  Board.cc  Board.cpp  Board.h  Button.cc  Button.h  Chance.cc  Chance.cpp  Chance.h  ContextWindow.cc  ContextWindow.h  Field.cc  Field.cpp  Field.h  Field.hpp  GameEngine.cc  GameEngine.h  GameScreen.cc  GameScreen.cpp  GameScreen.h  MonopolyGameEngine.cc  MonopolyGameEngine.h  NotificationWall.cc  NotificationWall.cpp  NotificationWall.h  Player.cc  Player.cpp  Player.h  Tinyann.cc  Tinyann.h  Tinyneat.cc  Tinyneat.h  Withdraw.cc  Withdraw.cpp  Withdraw.h  activeScreen.cpp  (+19 more)
Monopoly/game_config_json/: board.json  chance.json
Monopoly/tests/: CMakeLists.txt  catch_config.cpp  monopolyTests.cc  monopolyTests.cpp  test_board.json
config_files/: .clang-format  Doxyfile  clang-format.txt
docs/: Doxyfile
docs/docbook/: _active_screen_8cc.xml  _active_screen_8cc__incl.dot  _active_screen_8h.xml  _active_screen_8h__dep__incl.dot  _active_screen_8h__incl.dot  _ai_adapter_8cc.xml  _ai_adapter_8cc__incl.dot  _ai_adapter_8h.xml  _ai_adapter_8h__dep__incl.dot  _ai_adapter_8h__incl.dot  _board_8cc.xml  _board_8cc__incl.dot  _board_8cc_a92671e84f9d38a1f5a64ef20ad23ec39_icgraph.dot  _board_8h.xml  _board_8h__dep__incl.dot  _board_8h__incl.dot  _board_8h_a9f51f2d21bf4f1468f4481d2b6cf20a6_icgraph.dot  _board_8h_ad42d602c22869eaeb607bcce29881af1_icgraph.dot  _button_8cc.xml  _button_8cc__incl.dot  _button_8h.xml  _button_8h__dep__incl.dot  _button_8h__incl.dot  _chance_8cc.xml  _chance_8cc__incl.dot  _chance_8h.xml  _chance_8h__dep__incl.dot  _chance_8h__incl.dot  _context_window_8cc.xml  _context_window_8cc__incl.dot  _context_window_8h.xml  _context_window_8h__dep__incl.dot  _context_window_8h__incl.dot  _field_8cc.xml  _field_8cc__incl.dot  _field_8h.xml  _field_8h__dep__incl.dot  _field_8h__incl.dot  _game_engine_8cc.xml  _game_engine_8cc__incl.dot  (+414 more)
docs/html/: _active_screen_8cc.html  _active_screen_8cc__incl.map  _active_screen_8cc__incl.md5  _active_screen_8h.html  _active_screen_8h__dep__incl.map  _active_screen_8h__dep__incl.md5  _active_screen_8h__incl.map  _active_screen_8h__incl.md5  _active_screen_8h_source.html  _ai_adapter_8cc.html  _ai_adapter_8cc__incl.map  _ai_adapter_8cc__incl.md5  _ai_adapter_8h.html  _ai_adapter_8h__dep__incl.map  _ai_adapter_8h__dep__incl.md5  _ai_adapter_8h__incl.map  _ai_adapter_8h__incl.md5  _ai_adapter_8h_source.html  _board_8cc.html  _board_8cc.js  _board_8cc__incl.map  _board_8cc__incl.md5  _board_8cc_a92671e84f9d38a1f5a64ef20ad23ec39_icgraph.md5  _board_8cc_ad42d602c22869eaeb607bcce29881af1_icgraph.map  _board_8cc_ad42d602c22869eaeb607bcce29881af1_icgraph.md5  _board_8h.html  _board_8h.js  _board_8h__dep__incl.map  _board_8h__dep__incl.md5  _board_8h__incl.map  _board_8h__incl.md5  _board_8h_a92671e84f9d38a1f5a64ef20ad23ec39_icgraph.map  _board_8h_a9f51f2d21bf4f1468f4481d2b6cf20a6_icgraph.map  _board_8h_a9f51f2d21bf4f1468f4481d2b6cf20a6_icgraph.md5  _board_8h_source.html  _button_8cc.html  _button_8cc__incl.map  _button_8cc__incl.md5  _button_8h.html  _button_8h__dep__incl.map  (+1337 more)
docs/latex/: _active_screen_8cc.tex  _active_screen_8cc__incl.md5  _active_screen_8h.tex  _board_8cc.tex  (+638 more)
json/: json.hpp
(+201 files in other folders)
